vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.VPC_CIDR
  
  tags = {
    Name = var.ENV
  }
}
